2008-08-05  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Darin.

        Bug 20293: Crash in JavaScript codegen for eval("const a;")
        <https://bugs.webkit.org/show_bug.cgi?id=20293>

        Correctly handle constant declarations in eval code with no initializer.

        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::emitCodeSingle):

2008-08-05  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Roll out r35555 because of correctness issues.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-08-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        - add fast path for immediates to % operator, as we have for many other math ops
        
        0.6% speedup on SunSpider. 1.4x speedup on a prime testing torture test that Oliver whipped up.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-07-31  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 19359: JavaScriptCore behaves differently from FF2/3 and IE when handling context in catch statement
        <https://bugs.webkit.org/show_bug.cgi?id=19359>

        Make our catch behave like Firefox and IE, we do this by using a StaticScopeObject
        instead of a generic JSObject for the scope node.  We still don't make use of the
        fact that we have a static scope inside the catch block, so the internal performance
        of the catch block is not improved, even though technically it would be possible to
        do so.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitPushNewScope):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::createExceptionScope):
        (KJS::Machine::privateExecute):
        * VM/Machine.h:
        * VM/Opcode.h:
        * kjs/JSStaticScopeObject.cpp:
        (KJS::JSStaticScopeObject::toThisObject):